# PourRT

./: .gitignore  CLTest.cc  CLTest.cpp  CMakeLists.txt  README.md  RT.c  RTStructs.h  conanfile.txt  icosahedron.cc  icosahedron.cpp  icosahedron.h  main.cc  main.cpp
include/CL/: opencl.hpp
